--- a/composer.json
+++ b/composer.json
@@ -9,6 +9,7 @@
         "laravel/framework": "^11.9",
         "laravel/nova": "^4.0",
         "laravel/tinker": "^2.9",
+        "league/csv": "^9.18",
         "spatie/laravel-permission": "^6.10"
     },
     "require-dev": {
